# Resume_Static_Website

./: .dir-locals.el  .gitignore  Presentation.md  Presentation.org  README.md  README.org  TODO.org  pyproject.toml
My_resume/: index.html  scripts.js  styles.css
Terraformdeploy/: main.tf  outputs.tf  variables.tf
cdktf_gcp/: Pipfile  cdktf.json  main.py
step0/: manual deployement
step1/: main.tf  variables.tf
step2/: TODO.org  main.tf  provider.tf
step3/: .gitignore  dev.tfvars.sample  main.tf  terraform.tf  variables.tf  vars.tf
step3/providers/aws/static_website/: main.tf  vars.tf
step3/providers/az/static_website/: main.tf
step3/providers/goog/: main.tf  outputs.tf  variables.tf
step3/providers/goog/static_website/: main.tf  outputs.tf  vars.tf
step4/: cdktf.json  main.py  requirements.txt
terraform1/: main.tf  variables.tf
